// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart [common] example testing should match snapshot(s) for Basic 1`] = `
<section
  style="padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</section>
`;

exports[`PieChart [common] example testing should match snapshot(s) for BasicDonuts 1`] = `
<section
  style="padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-1-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-lightest"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-light"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-dark"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5-darkest"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</section>
`;

exports[`PieChart [common] example testing should match snapshot(s) for ColorMap 1`] = `
<section
  style="padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-good"
              d="100"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="100"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="10"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="10"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-bad"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</section>
`;

exports[`PieChart [common] example testing should match snapshot(s) for LegendTest 1`] = `
<section
  style="display:flex;align-items:center;padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="80"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="80"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="10"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="10"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <ul
    class="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
  >
    <li
      class="lucid-Legend-Item"
    >
      <svg
        class="lucid-Legend-Item-indicator"
        height="12"
        width="12"
      >
        <path
          class="lucid-Point lucid-Point-color-chart-3"
          d="M6,12 C0,12 0,12 0,6 C0,0 -0,0 6,0 C12,0 12,0 12,6 C12,12 12,12 6,12 z"
          transform="translate(0, 0) scale(1)"
        />
      </svg>
      Leslie
    </li>
    <li
      class="lucid-Legend-Item"
    >
      <svg
        class="lucid-Legend-Item-indicator"
        height="12"
        width="12"
      >
        <path
          class="lucid-Point lucid-Point-color-chart-0-darkest"
          d="M6,12 C0,12 0,12 0,6 C0,0 -0,0 6,0 C12,0 12,0 12,6 C12,12 12,12 6,12 z"
          transform="translate(0, 0) scale(1)"
        />
      </svg>
      Tom
    </li>
    <li
      class="lucid-Legend-Item"
    >
      <svg
        class="lucid-Legend-Item-indicator"
        height="12"
        width="12"
      >
        <path
          class="lucid-Point lucid-Point-color-chart-2"
          d="M6,12 C0,12 0,12 0,6 C0,0 -0,0 6,0 C12,0 12,0 12,6 C12,12 12,12 6,12 z"
          transform="translate(0, 0) scale(1)"
        />
      </svg>
      Ron
    </li>
    <li
      class="lucid-Legend-Item"
    >
      <svg
        class="lucid-Legend-Item-indicator"
        height="12"
        width="12"
      >
        <path
          class="lucid-Point lucid-Point-color-chart-4-lightest"
          d="M6,12 C0,12 0,12 0,6 C0,0 -0,0 6,0 C12,0 12,0 12,6 C12,12 12,12 6,12 z"
          transform="translate(0, 0) scale(1)"
        />
      </svg>
      Ann
    </li>
  </ul>
</section>
`;

exports[`PieChart [common] example testing should match snapshot(s) for Percents 1`] = `
<section
  style="padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="200"
    width="200"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(10, 10)"
      >
        <g
          transform="translate(90, 90)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-3"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-0-darkest"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-4-lightest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-PieChart-slice-has-stroke lucid-Line lucid-Line-color-chart-5"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</section>
`;

exports[`PieChart [common] example testing should match snapshot(s) for SmallWithNoStrokeOrHover 1`] = `
<section
  style="padding-top:4rem"
>
  <svg
    class="lucid-PieChart"
    height="25"
    width="25"
  >
    <g
      class="lucid-ContextMenu lucid-ToolTip"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          transform="translate(12.5, 12.5)"
        >
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-Line lucid-Line-color-chart-3"
              d="60"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="60"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-Line lucid-Line-color-chart-0-darkest"
              d="40"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="40"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-Line lucid-Line-color-chart-2"
              d="30"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="30"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-Line lucid-Line-color-chart-4-lightest"
              d="20"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="20"
              transform="scale(1.1)"
            />
          </g>
          <g
            class="lucid-PieChart-slice-group"
          >
            <path
              class="lucid-PieChart-slice lucid-Line lucid-Line-color-chart-5"
              d="15"
              transform="scale(1)"
            />
            <path
              class="lucid-PieChart-slice-hover"
              d="15"
              transform="scale(1.1)"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</section>
`;
